public/css/default/style.css
/* Box Model Hack */
* {
    box-sizing: border-box;
}

/* Clear fix hack */
.clearfix:after {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}

.clear {
   clear: both;
}

/******************************************
/* BASE STYLES
/* /******************************************* */

html {
    overflow: hidden;
    height: 100%;
}

body {
    font-family: 'Roboto', sans-serif;
    height: 100%;
    overflow: auto;
    background: linear-gradient(to right bottom , black 30%, #25a7a2) no-repeat;
}

main {
    position: relative;
    color: white;
}

h2{
    font-size: 2rem;
}

h1{
    font-size: 3rem;
}

footer {
    display: flex;
    width: 100%;
    height: 100px;
    background-color: black;
    color: white;
    justify-content: center;
    align-items: center;
    font-size: .8rem;
}

